--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -52,7 +52,10 @@
 			left: 0;
 			position: absolute;
 			top: 30px;
-			width: 100%;
+      width: 100%;
+      @include breakpoint('<=small') {
+        visibility: hidden !important;
+      }
     }
 
 		&.reveal {
@@ -141,7 +144,7 @@
 
 			& + #banner {
 				margin-top: -3rem;
-			}
+      }
 		}
 
 		@include breakpoint('<=xsmall') {
@@ -150,7 +153,7 @@
 				text-indent: 4rem;
 				white-space: nowrap;
 				width: 4rem;
-			}
+      }
 		}
 	}
 
